--- a/3.mapper.tex
+++ b/3.mapper.tex
@@ -1,7 +1,7 @@
 \section{Lmapper}
 \subsection{Intro}
-The architecture has been inspired to the previous implementation of Daniel M\"ullner \cite{pythonmapper}. Compared to Kepler Mapper, this architecture is complex but more modular. However, the API of such package is too complex to use, and thus we aimed to design a simpler API similar to Kepler Mapper's one.\\
-The approach followed for the development of this package was a test-driven approach: first a basic test for the package was written, and then the code necessary to make it work was developed. Once the first test was passed, this procedure was iterated with a more complex test containing more advanced features. This approach was chosen since in this way the development was always guided by a specific goal (pass the test).
+The architecture has been inspired to the previous implementation of Daniel M\"ullner \cite{pythonmapper}. Compared to Kepler Mapper, this architecture is complex but more modular. However, the API of \cite{pythonmapper} is really complex to use, and thus we aimed to design a simpler API similar to Kepler Mapper's one.\\
+The approach followed for the development of this package was a test-driven one: first a basic test for the package was written, and then the code necessary to make it work was developed. Once the first test was passed, this procedure was iterated with a more complex test containing more advanced features. This approach was chosen since in this way the development was always guided by a specific goal (pass the test).
 We present here under the first two tests that were designed and we comment them.
 
 \paragraph{test 1}
@@ -35,11 +35,11 @@ main()
 \end{lstlisting}
 This test shows the main components and design choices of the package. 
 \paragraph{Import statements}
-The code would be structured in a pure OOP fashion. The package would have been composed by five modules: \_mapper.py, filter.py, cover.py, cluster.py, cutoff.py.  Each module contains the definitions of the classes implementing the corresponding algorithms. 
+The code is structured in a pure OOP fashion. The package is composed by five base modules: \_mapper.py, filter.py, cover.py, cluster.py, cutoff.py, datasets.py.  Each module contains the definitions of the classes implementing the corresponding algorithms. 
 \paragraph{main()}
-First, one object for the filter, one object for the cover, one object for the cutoff method used in the clustering step, one object for the clustering step are instantiated. Given the many parameters of Mapper, in this way each step of the Mapper pipeline is isolated in an object that contains its set of parameters, avoiding long lists of parameters that could make the API confused.\\
+First, one object for the filter, one object for the cover, one object for the cutoff method used in the clustering step, one object for the clustering step are instantiated. Given the many parameters of Mapper, in this way each step of the Mapper pipeline is isolated in an object that contains its set of parameters, avoiding long lists of parameters that could make the API confusing.\\
 These objects (filter, cover, cluster) are then used to instantiate a mapper object together with the data that has to be analyzed. The mapper object has to expose to the client user two methods: fit() and plot().\\
-It can be seen that such test looks more readable that the code necessary for PyMapper, but however it let the user set all the parameters that Kepler Mapper hides and does not let the user choose. Plus, the package is clearly modular: if in the future more algorithms would be necessary (i.e. a new way of building a cover, or a new clustering algorithm) it would be necessary to implement a corresponding new class respecting the API of the backend to correctly interact with the other modules, expose it to the user and all the future patches of the package would make all the old client code still compatible.\\
+It can be seen that such test looks more readable that the code (in Listing 2) necessary for PyMapper, but however it lets the user set all the parameters that Kepler Mapper hides and does not let the user choose. The package is clearly modular: if in the future more algorithms would be necessary (i.e. a new way of building a cover, or a new clustering algorithm) it would be necessary to implement a corresponding new class respecting the API to correctly interact with the other modules, expose it to the user and all the future patches of the package would make all the old client code still compatible.\\
 
 \paragraph{test 2}
 \begin{lstlisting}[language=Python, caption=Second test for Mapper]
@@ -77,24 +77,25 @@ if __name__ == "__main__":
 main()
 
 \end{lstlisting}
-This test was designed to solve the following issue: Mapper has a lot of parameters, and to set them correctly a lot of trial-and-error has to be done by the user to find a good choice of parameters. All the previous implementations taken in exam in this work, when a parameter is changed, need to recalculate everything from scratch, making the trial-and-error procedure really slow and annoying. However, Mapper is an algorithm that has a clear pipeline
+This test was designed to solve the following issue: Mapper has a lot of parameters, and to set them correctly a lot of trial-and-error has to be done by the user to find a good choice of parameters. All the previous implementations up to our knowledge, when a parameter is changed, need to recalculate everything from scratch, making the trial-and-error procedure really slow. However, Mapper is an algorithm that has the following clear pipeline:
+
+\textbf{Mapper pipeline}
 \begin{enumerate}
 	\item Calculate the filter values
 	\item Calculate the pull-back cover
 	\item Cluster each element of the pullback cover
 	\item Build the simplicial complex from the elements of the pullback cover
 \end{enumerate}
-Each one of these steps is completely independent from the previous ones; this means that if we fit a Mapper object, and then we decide to try to fit it with a change of the clustering method, there's no need to recompute the filter values and the pullback cover, and the computations could restart from step (3). To enable this we need to design the Mapper class to store all the intermediate information needed to restart the computation from whichever step, and make it "aware" of the changes to the previous set of parameters through the method set\_params().\\
-We want to underline that this design represents a completely new feature that was never implemented before in our knowledge.\\
+Each one of these steps is completely independent from the previous ones; this means that if we fit a Mapper object, and then we decide to try to fit it changing of the clustering method, there's no need to recompute the filter values and the pullback cover, and the computations could restart from step (3). To enable this we need to design the Mapper class to store all the intermediate information needed to restart the computation from whichever step, and make it "aware" of the changes to the previous set of parameters through the method set\_params().\\
 \paragraph{Base architecture}
-In figure \ref{fig:basearchitecture} the architecture for a first implementation of the package necessary to pass the first two tests is illustrated. The final version of the package is more complex, but this is sufficient to illustrate the high level design choices that were respected during the whole development. The real architecture will be discussed in details later on.\\
+In figure \ref{fig:basearchitecture} the architecture for a first implementation of the package necessary to pass the first two tests is illustrated. The final version of the package is more complex, but this is sufficient to illustrate the high level design choices that were respected during the whole development.\\
 \begin{figure}[h]
 	\caption{Simplified Mapper Architecture (simplified)}
 	\centering
 	\includegraphics[width=1\textwidth]{Figs/SimplifiedArchitecture.png}
 	\label{fig:basearchitecture}
 \end{figure}
-Three classes \textit{class Filter, class Cover, class Cluster} defining the API of the backend of the package are defined, one for each of the first three steps of the Mapper pipeline. Every class implementing an algorithm for a pipeline step has to derive from one of these classes,  in order to be compatible with the package. \textit{class Complex} is responsible for the fourth and last step of the Mapper pipeline. The classes exposed to the user would be only \textit{class Mapper, class Projection, class BalancedCover, class Linkage}. All the other classes, explained in detail later on, will be part of the backend of the package, and thus should not be used in any client code.
+Three base classes \textit{class Filter, class Cover, class Cluster} defining the API of the backend of the package are defined, one for each of the first three steps of the Mapper pipeline. Every class implementing an algorithm for a pipeline step has to derive from one of these classes,  in order to be compatible with the package. \textit{class Complex} is responsible for the fourth and last step of the Mapper pipeline. The classes exposed to the user would be only \textit{class Mapper, class Projection, class BalancedCover, class Linkage}. All the other classes, explained in detail in Section 3.2, will be part of the backend of the package, and thus should not be used in any client code.
 
 \subsection{Description of the classes}
 In figure \ref{fig:fullmapperarchitecture} we present the UML graph of the final version of the package.
@@ -171,7 +172,7 @@ mapper.plot()
 \end{lstlisting}
 
 
-As shown in the example he Mapper init method requires four arguments: the data matrix as a two-dimensional numpy array, where the $n-th$ row represents the coordinates of the $n-th$ data point; the filter object, the cover object, and the cluster object. //
+As shown in the example the init method requires four arguments: the data matrix as a two-dimensional numpy array, where the $n-th$ row represents the coordinates of the $n-th$ data point; the filter object, the cover object, and the cluster object. \\
 We present now the main original features of this implementation of the Mapper algorithm, that haven't been implemented neither in Kepler Mapper neither in Python Mapper.
 
 \paragraph{Optimized calls to fit()}
@@ -217,7 +218,7 @@ Since in practice it is normal to alternate many calls to fit() and set\_params(
 \subsubsection{filter.py}
 This module implements some common filters.
 \paragraph{\textit{class filter.Filter}} \label{subsubsection:class filter.Filter}
-Python do not provide the opportunity of defining abstract classes. However, given the non trivial complexity of the package, we chose to the define anyway a base class for each step of of the Mapper pipeline to provide a clear way of understanding the interface of the backend API. \textit{Each one of these four classes} \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} \textit{was written in order that every time a new filter, cover, cluster, cutoff has to be implemented, it will be implemented as a class derived from one of these corresponding base classes}. For example, a projection filter has to be implemented as child class of the corresponding Filter class: \lstinline|class Projection(Filter)|. For example, the programmer that will be expanding the package by adding a new filter, will have to read the code of the Filter class to see which methods have to be overridden, and which methods are already provided in the base class. In this way these four base classes act as a guideline for the programmer to make sure that every newly added class will respect the backend API of the package.\\The class Filter simply declares the \lstinline{__call__()} operator raising a \lstinline{NotImplementedError} exception, indicating to the programmer that any new filter has to override such a method. Since Python is not type-checked (although the package \textbf{typing} could be used from Python 3.5) it was chosen to put clear indications of the expected parameter and the return value type In the docstring of the \lstinline{filter.Filter.__call__()} method. The same procedure has been used for all the methods of the thee other base classes \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} raising a \lstinline{NotImplementedError} exception.\\ A static factory method necessary for the instantiation of the Filter object when the Mapper object is instantiated with only strings as arguments. Note that the code of \lstinline{filter.Filter.factory()} does not have to be updated every time a new child class is added to the package thanks to the use of the \lstinline{globals()} method.
+Python do not provide the opportunity of defining abstract classes. However, given the non trivial complexity of the package, we chose to the define anyway a base class for each step of of the Mapper pipeline to provide a clear way of understanding the interface of the backend API. \textit{Each one of these four classes} \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} \textit{was written in order that every time a new filter, cover, cluster, cutoff has to be implemented, it will be implemented as a class derived from one of these corresponding base classes}. For example, a projection filter has to be implemented as child class of the corresponding Filter class: \lstinline|class Projection(Filter)|. The programmer that will be expanding the package by adding a new filter, will have to read the code of the Filter class to see which methods have to be overridden, and which methods are already provided in the base class. In this way these four base classes act as a guideline for the programmer to make sure that every newly added class will respect the backend API of the package.\\The class Filter simply declares the \lstinline{__call__()} operator raising a \lstinline{NotImplementedError} exception, indicating to the programmer that any new filter has to override such a method. Since Python is not type-checked (although the package \textbf{typing} could be used from Python 3.5) it was chosen to put clear indications of the expected parameter and the return value type In the docstring of the \lstinline{filter.Filter.__call__()} method. The same procedure has been used for all the methods of the thee other base classes \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} raising a \lstinline{NotImplementedError} exception.\\ A static factory method is implemented. Note that the code of \lstinline{filter.Filter.factory()} does not have to be updated every time a new child class is added to the package thanks to the use of the \lstinline{globals()} method.
 \paragraph{\textit{class filter.Eccentricity(filter.Filter)}}
 This implements the eccentricity filter as presented in \cite{pythonmapper}. In short, the eccentricity filter value of the $n-th$ data point is the p-norm of the $n-th$ row of the distance matrix
 $$Eccentricity(x_i; p) = \left(\sum_{k=0}^{N} d(x_i, x_k)^p\right)^\frac{1}{p}$$
