--- a/1.introduction_to_TDA.tex
+++ b/1.introduction_to_TDA.tex
@@ -25,7 +25,7 @@ One way for scientists to make sense of complex data is to identify groups (clus
 	\label{fig:torus}
 \end{figure}
 
-In the work of G. Carlsson et al. \cite{extracting_insights} a new algorithm called Mapper, based on a different approach, was presented. The observed points are thought not as sampled from a distribution, such as in GMM, but are thought to be sampled form an ideal object $\mathcal{O}$ with a particular shape; Mapper tries to visualize this shape. The concept of shape of a high-dimensional object is although non trivial, but tools to study the shape of such high-dimensional objects were already available in literature before Mapper: Reeb graphs. Reeb graphs manage to describe in a compact way information about an object $\mathcal{O}$ by keeping track of the evolution of the topology of the connected components of the level sets $f^{-1}(c), c\in \mathbb{R}$ of a function $f:\mathcal{O}\rightarrow\mathbb{R}$\cite{reebgraphs} \cite{biasotti}. The object $\mathcal{O}$ is however only an abstraction; inspired from the Reeb graphs, Mapper is an algorithm that implements this same idea but on the finite collection of data points, where the notion of "connected component" and level set are not well defined as on the ideal object $\mathcal{O}$. The output of Mapper can be thought of  as the skeleton of the shape of the object $\mathcal{O}$ from which the points are imagined to be sampled.  Thanks to a careful visual analysis of this skeleton we can improve our understanding of the dataset, and thus it is sometimes possible to perform a finer and more meaningful clustering of the datasets than with traditional algorithms \cite{extracting_insights}. In the following paragraph a first example of an application of Mapper is presented, in order to introduce the reader to the algorithm. With this example we want to provide the reader just with a first intuition of Mapper and introduce him to concepts such as filter function and distance; in the next section a formal definition of Mapper is provided.
+In the work of G. Carlsson et al. \cite{extracting_insights} a new algorithm called Mapper, based on a different approach, was presented. The observed points are thought not as sampled from a distribution, such as in GMM, but are thought to be sampled from an ideal object $\mathcal{O}$ with a particular shape; Mapper tries to visualize this shape. The concept of shape of a high-dimensional object is although non trivial, but tools to study the shape of such high-dimensional objects were already available in literature before Mapper: Reeb graphs. Reeb graphs manage to describe in a compact way information about an object $\mathcal{O}$ by keeping track of the evolution of the topology of the connected components of the level sets $f^{-1}(c), c\in \mathbb{R}$ of a function $f:\mathcal{O}\rightarrow\mathbb{R}$\cite{reebgraphs} \cite{biasotti}. The object $\mathcal{O}$ is however only an abstraction; inspired from the Reeb graphs, Mapper is an algorithm that implements this same idea but on the finite collection of data points, where the notion of "connected component" and level set are not well defined as on the ideal object $\mathcal{O}$. The output of Mapper can be thought of  as the skeleton of the shape of the object $\mathcal{O}$ from which the points are imagined to be sampled.  Thanks to a careful visual analysis of this skeleton we can improve our understanding of the dataset, and thus it is sometimes possible to perform a finer and more meaningful clustering of the datasets than with traditional algorithms \cite{extracting_insights}. In the following paragraph a first example of an application of Mapper is presented, in order to introduce the reader to the algorithm. With this example we want to provide the reader just with a first intuition of Mapper and introduce him to concepts such as filter function and distance; in the next section a formal definition of Mapper is provided.
 
 \paragraph{A first example} 
 In this first introductory example, taken from \cite{extracting_insights}, a three dimensional dataset is analyzed, since it is possible to visualize the data point cloud and get an understanding of the "shape" of the dataset just by looking at it.\newline 
