--- a/5.fastfilter.tex
+++ b/5.fastfilter.tex
@@ -1,18 +1,18 @@
 \section{filterutils: a C++ extension with the use of OpenMP}
-filterutils is a Pyhton module written in C++ with the use of the binding library PyBind11 that makes use of OpenMP to provide low-level control of the parallelization of two important CPU-intensive tasks: the computation of the eccentricity filter function. While the final goal would be to implement more and more parts of the algorithm in C++ and with the use of OpenMP, the complexity of developing a Python package in C++ is however non trivial. Although the biggest bottleneck of the algorithm is the clustering step, it was observed (see section \ref{sec:benchmark}) that in numerous use cases the computation of the eccentricity represents a big bottleneck of the algorithm, comparable to the one of the clustering step. The computation of the eccentricity is however simpler to implement in C++, and simpler to optimize, since the problem is purely its being CPU intensive, while the clustering step, apart from being more complex, is also heavily memory intensive, and thus requires much more care to be correctly optimized. For these reasons it was chosen to start with the parallelization of the eccentricity, leaving the clustering step for further developments.
+filterutils is a Pyhton module written in C++ with the use of the binding library PyBind11 \cite{pybind11} that makes use of OpenMP to provide low-level control of the parallelization of two important CPU-intensive tasks: the computation of the eccentricity filter function. While the final goal would be to implement more and more parts of the algorithm in C++ and with the use of OpenMP, the complexity of developing a Python package in C++ is however non trivial. Although the biggest bottleneck of the algorithm is the clustering step, it was observed that in numerous use cases the computation of the eccentricity represents a big bottleneck of the algorithm, comparable to the one of the clustering step. The computation of the eccentricity is however simpler - with respect to the clustering step - to implement, and simpler to optimize, since the problem is purely its being CPU intensive, while the clustering step, is also heavily memory intensive, and thus requires much more care to be correctly optimized. For these reasons it was chosen to start with the parallelization of the eccentricity, leaving the parallelization of the clustering step for further developments.
 
-\subsection{Challenges} 
+\subsection*{Challenges} 
 To write this simple package it was necessary to deal with the following problems. 
 
 \textit{The binding code} When writing a Python function in C++, the steps to follow are the following:
 \begin{enumerate}
 	\item Parse the Python objects received as arguments in C objects.
 	\item perform the computations with the C++ objects to produce other C++ objects.
-	\item Parse the C++ objects results of the computation to construct Python objects to return to the Python interpreter.
+	\item Parse the C++ objects, results of the computation, to construct Python objects to return to the Python interpreter.
 \end{enumerate}
-The code necessary to perform the steps 1 and 3 is called \textit{binding code}. Python provides a Python/C++ API that however has the following disadvantages: it is really verbose and produces complicated code that is hardly readable. It is hard to use. For these reasons we decided to use PyBind11, a C++ library developed mainly by Wenzel Jacob at EPFL that aims at solving these issues. From PyBind11 documentation, "pybind11 is a lightweight header-only library that exposes C++ types in Python and vice versa, mainly to create Python bindings of existing C++ code. Its goals and syntax are [..] to minimize boilerplate code in traditional extension modules by inferring type information using compile-time introspection."
+The code necessary to perform the steps 1 and 3 is called \textit{binding code}. Python provides a Python/C++ API that however has the following disadvantages: it is really verbose and produces complicated code that is hardly readable. It is hard to use. For these reasons we decided to use PyBind11 \cite{pybind11}, a C++ library developed by Wenzel Jacob et al. at EPFL that aims at solving these issues. From PyBind11 documentation, "pybind11 is a lightweight header-only library that exposes C++ types in Python and vice versa, mainly to create Python bindings of existing C++ code. Its goals and syntax are [..] to minimize boilerplate code in traditional extension modules by inferring type information using compile-time introspection."
 
-\textit{How to parallelize the computations} To parallelize the computations, it was chosen to use OpenMP since the code is supposed to be ran on multi-core systems and not on clusters, thus making the shared memory abstraction of OpenMP the most coherent with the hardware where the code is supposed to run, as opposed to message passing abstractions.
+\textit{How to parallelize the computations} To parallelize the computations, it was chosen to use OpenMP since the code is supposed to run on multi-core systems and not on clusters, thus making the shared memory abstraction of OpenMP the most coherent with the hardware where the code is supposed to run, as opposed to message passing abstractions.
 
-filterutils.cpp implement just two Python functions, \lstinline|my_distance()| and \lstinline|eccentricity()|. These functions are imported in the \lstinline|lmapper.filter.py| module and used in the implementation of the class \lstinline|lmapper.filter.Eccentricity|
+filterutils.cpp implements - for now - just two Python functions, \lstinline|my_distance()| and \lstinline|eccentricity()|. These functions are imported in the \lstinline|lmapper.filter.py| module and used in the implementation of the class \lstinline|lmapper.filter.Eccentricity|
 As a remark, a more complete package, fastfilter.cpp - that in our intention would replace completely the module \lstinline|lmapper.filter.py| providing a full C++ implementation of the classes in \lstinline|lmapper.filter.py| - is under development but unfortunately still bugs at run time. For the interested readers in such package one could find the code necessary to bind C++ classes (and not only functions) to the Python interpreter.
