--- a/references.bib
+++ b/references.bib
@@ -224,3 +224,15 @@ url={http://www.math.wayne.edu/~rrb/topology.html},
 	month        = {nov},
 	year         = {2017},
 }
+
+@MISC {Palma,
+	author       = {Francesco Palma and Thomas Boys and Martino Milani and Martina Scolamiero},
+	title        = {Predictive models in topological data analysis: the case of Mapper},
+}
+
+@misc{pybind11,
+   author = {Wenzel Jakob and Jason Rhinelander and Dean Moldovan},
+   year = {2016},
+   note = {https://github.com/pybind/pybind11},
+   title = {pybind11 ? Seamless operability between C++11 and Python}
+} 
